--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.2",
+    "chalk": "^5.4.1",
     "cookies-next": "^4.1.1",
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
+    "inquirer": "^8.2.6",
     "jalaali-js": "^1.2.6",
     "next": "14.2.3",
     "path": "^0.12.7",
@@ -28,19 +30,13 @@
     "react-multi-date-picker": "^4.5.2",
     "react-redux": "^9.1.0",
     "react-syntax-highlighter": "^15.5.0",
+    "redline": "^1.0.1",
     "socket.io-client": "^4.7.5",
     "video.js": "^8.6.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
-    "commitizen": "^4.3.1",
-    "cz-conventional-changelog": "^3.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
   }
 }
