style(ui): logIn ui changed
- logIn ui change for new theme

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "app_name": "هرمس",
-    "logo_url": "assets/logo.jpg",
+    "logo_url": "assets/logo.png",
     "api": "http://localhost:3000/",
     "site_description" : "آموزش انلاین",
     "onLocal" : true
