feat(config): translator added

--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
     "logo_url": "assets/logo.png",
     "api": "http://localhost:3000/",
     "site_description" : "آموزش انلاین",
-    "onLocal" : true
+    "onLocal" : true,
+    "language" : "fa"
 }
