refactor(auth): logIn with password hooks is ready

--- a/config.json
+++ b/config.json
@@ -4,5 +4,6 @@
     "api": "http://localhost:3000/",
     "site_description" : "آموزش انلاین",
     "onLocal" : true,
-    "language" : "fa"
+    "language" : "fa",
+    "direction" : "ltr"
 }
