--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-multi-date-picker": "^4.5.2",
     "react-redux": "^9.1.0",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^11.0.2",
     "redline": "^1.0.1",
     "socket.io-client": "^4.7.5",
     "video.js": "^8.6.1",
