--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@lottiefiles/react-lottie-player": "^3.5.4",
+    "@next/env": "^15.1.3",
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.2",
@@ -18,9 +19,11 @@
     "cookies-next": "^4.1.1",
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
+    "googleapis": "^144.0.0",
     "inquirer": "^8.2.6",
     "jalaali-js": "^1.2.6",
     "next": "14.2.3",
+    "next-auth": "^4.24.11",
     "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
@@ -33,7 +36,7 @@
     "redline": "^1.0.1",
     "socket.io-client": "^4.7.5",
     "video.js": "^8.6.1",
-    "yup": "^1.3.3"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "postcss": "^8",
