--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.17",
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@next/env": "^15.1.3",
+    "@react-oauth/google": "^0.12.1",
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.2",
