--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-oauth/google": "^0.12.1",
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.1.0",
+    "@svgr/webpack": "^8.1.0",
     "axios": "^1.6.2",
     "chalk": "^5.4.1",
     "cookies-next": "^4.1.1",
