--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "googleapis": "^144.0.0",
     "inquirer": "^8.2.6",
     "jalaali-js": "^1.2.6",
+    "lottie-react": "^2.4.0",
     "next": "14.2.3",
     "next-auth": "^4.24.11",
     "path": "^0.12.7",
