--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.2",
     "chalk": "^5.4.1",
     "cookies-next": "^4.1.1",
+    "cytoscape": "^3.31.0",
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
     "googleapis": "^144.0.0",
