--- a/package.json
+++ b/package.json
@@ -1,48 +1,41 @@
 {
-  "name": "talawin_f",
+  "name": "test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "@lottiefiles/react-lottie-player": "^3.5.4",
-    "@next/env": "^15.1.3",
+    "@editorjs/editorjs": "^2.30.8",
+    "@editorjs/header": "^2.8.8",
     "@react-oauth/google": "^0.12.1",
-    "@redux-devtools/extension": "^3.3.0",
-    "@reduxjs/toolkit": "^2.1.0",
-    "axios": "^1.6.2",
-    "chalk": "^5.4.1",
-    "cookies-next": "^4.1.1",
+    "@reduxjs/toolkit": "^2.5.1",
+    "axios": "^1.7.9",
+    "cookies-next": "^5.1.0",
     "cytoscape": "^3.31.0",
-    "echarts": "^5.5.0",
-    "echarts-for-react": "^3.0.2",
     "googleapis": "^144.0.0",
-    "inquirer": "^8.2.6",
-    "jalaali-js": "^1.2.6",
-    "lottie-react": "^2.4.0",
-    "next": "14.2.3",
-    "next-auth": "^4.24.11",
+    "i": "^0.3.7",
+    "inquirer": "^12.4.1",
+    "jalaali-js": "^1.2.7",
+    "lottie-react": "^2.4.1",
+    "next": "15.1.7",
+    "npm": "^11.1.0",
     "path": "^0.12.7",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.12.0",
-    "react-image-crop": "^11.0.5",
-    "react-multi-date-picker": "^4.5.2",
-    "react-redux": "^9.1.0",
-    "react-syntax-highlighter": "^15.5.0",
-    "redline": "^1.0.1",
-    "socket.io-client": "^4.7.5",
-    "video.js": "^8.6.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
+    "react-image-crop": "^11.0.7",
+    "react-redux": "^9.2.0",
+    "react-svg": "^16.3.0",
+    "socket.io-client": "^4.8.1",
+    "video.js": "^8.21.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
-    "@svgr/webpack": "^8.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
