--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "@editorjs/header": "^2.8.8",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.5.1",
+    "@tiptap/extension-heading": "^2.11.5",
+    "@tiptap/extension-highlight": "^2.11.5",
+    "@tiptap/extension-image": "^2.11.5",
+    "@tiptap/extension-link": "^2.11.5",
+    "@tiptap/extension-text-align": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "axios": "^1.7.9",
     "cookies-next": "^5.1.0",
     "cytoscape": "^3.31.0",
     "googleapis": "^144.0.0",
-    "i": "^0.3.7",
-    "inquirer": "^12.4.1",
+    "inquirer": "^8.2.6",
     "jalaali-js": "^1.2.7",
     "lottie-react": "^2.4.1",
     "next": "15.1.7",
