--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-image-crop": "^11.0.7",
+    "react-qr-code": "^2.0.15",
     "react-redux": "^9.2.0",
     "react-svg": "^16.3.0",
     "socket.io-client": "^4.8.1",
